# MatVK

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: MatVKConfig.cmake
examples/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/MatVK/: buffer.hpp  matrixSubres.hpp  matvk.hpp  queueBase.hpp  scalarSubres.hpp  shader.hpp  vulkanBase.hpp
src/: CMakeLists.txt  assignment.cpp  buffer.cpp  constantBase.cpp  dotOperation.cpp  expressionBase.cpp  infixOperation.cpp  matrixBase.cpp  matrixSubres.cpp  matvk.cpp  prefixOperation.cpp  queue.cpp  queueBase.cpp  scalarBase.cpp  scalarSubres.cpp  shader.cpp  vulkanBase.cpp
tests/: CMakeLists.txt  computeTest.cpp  computeTest.hpp
